--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,7 +27,21 @@
 :root {
   scroll-behavior: smooth;
 }
-
+.navbar .getstarted,
+.navbar .getstarted:focus {
+  padding: 8px 20px;
+  margin-left: 30px;
+  border-radius: 50px;
+  color: #fff;
+  font-size: 14px;
+  border: 2px solid #000000;
+  font-weight: 600;
+}
+.navbar .getstarted:hover,
+.navbar .getstarted:focus:hover {
+  color: rgb(255, 255, 255);
+  background: #424242;
+}
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
